Added all methods in the InMemoryBookRepository, and added equals and hashcode in Book